k8s/mysql-netdelta-deployment-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysql-netdelta
  name: mysql-netdelta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-netdelta
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql-netdelta
    spec:
      containers:
      - image: registry.netdelta.io/netdelta/mysql:1.0
        imagePullPolicy: IfNotPresent
        name: mysql-netdelta
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: data
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
status: {}
