k8s/netdelta-app-barbican.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: netdelta-barbican
  name: netdelta-barbican
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netdelta-barbican
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: netdelta-barbican
    spec:
      containers:
      - image: registry.netdelta.io/netdelta/barbican:1.0
        imagePullPolicy: IfNotPresent
        name: netdelta-barbican
        ports:
        - containerPort: 9004
        args:
          - "barbican"
          - "9004"
          - "le"
        resources: {}
        volumeMounts:
          - mountPath: /srv/staging
            name: netdelta-app
          - mountPath: /logs
            name: netdelta-logs
          - mountPath: /le
            name: le
          - mountPath: /data
            name: data
          - mountPath: /srv/netdelta_venv
            name: netdelta-venv
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: netdelta-app
          persistentVolumeClaim:
            claimName: netdelta-app
        - name: netdelta-logs
          persistentVolumeClaim:
            claimName: netdelta-logs
        - name: le
          persistentVolumeClaim:
            claimName: le
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: netdelta-venv
          persistentVolumeClaim:
            claimName: netdelta-venv
      restartPolicy: Always
      serviceAccountName: ""

status: {}
