k8s/netdelta-app-xynexis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: netdelta-xynexis
  name: netdelta-xynexis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netdelta-xynexis
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: netdelta-xynexis
    spec:
      containers:
      - image: registry.netdelta.io/netdelta/xynexis:1.0
        imagePullPolicy: IfNotPresent
        name: netdelta-xynexis
        ports:
        - containerPort: 9005
        args:
          - "xynexis"
          - "9005"
          - "le"
          - "certs"
        resources: {}
        volumeMounts:
          - mountPath: /srv/staging
            name: netdelta-app
          - mountPath: /srv/logs
            name: netdelta-logs
          - mountPath: /le
            name: le
          - mountPath: /var/lib/mysql
            name: data
          - mountPath: /srv/netdelta_venv
            name: netdelta-venv
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: netdelta-app
          persistentVolumeClaim:
            claimName: netdelta-app
        - name: netdelta-logs
          persistentVolumeClaim:
            claimName: netdelta-logs
        - name: le
          persistentVolumeClaim:
            claimName: le
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: netdelta-venv
          persistentVolumeClaim:
            claimName: netdelta-venv
      restartPolicy: Always
      serviceAccountName: ""
status: {}
