k8s/fileserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileserver
spec:
  selector:
    app: fileserver
    ports:
      - name: "3306"
        port: 3306
        targetPort: 3306
    selector:
      io.kompose.service: mysql-netdelta
status:
  loadBalancer: {}
