k8s/mysql-netdelta-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /opt/kompose convert -f docker-compose-backend.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql-netdelta
  name: mysql-netdelta
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: mysql-netdelta
status:
  loadBalancer: {}
