k8s/netdelta-barbican-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: netdelta-barbican
  name: netdelta-barbican
spec:
  ports:
  - name: "9004"
    port: 9004
    targetPort: 9004
  selector:
    app: netdelta-barbican
status:
  loadBalancer: {}
