k8s/netdelta-xynexis-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: netdelta-xynexis
  name: netdelta-xynexis
spec:
  ports:
  - name: "9005"
    port: 9005
    targetPort: 9005
  selector:
    app: netdelta-xynexis
status:
  loadBalancer: {}
